--- a/mysite/touchgrass/templates/touchgrass/home.html
+++ b/mysite/touchgrass/templates/touchgrass/home.html
@@ -1,22 +1,43 @@
 {% extends 'touchgrass/base.html' %}
 {% block body %}
-<h1>Home Page</h1>
+<h1 style="margin-left: 10%">Home Page</h1>
 {% if user.is_authenticated %}
+    <div class="h-100 d-flex align-items-center justify-content-center">
+        <form action="" method="get">
+            <input type="search" name="username">
+            <button type="submit">Search Username</button>
+        </form>
+    </div>
     {% for post in post %}
-        <div class="row" style="padding-bottom: 10px">
-            <div class="col-md-4">
+        <div class="row" style="margin-bottom: 10px; min-height: 200px; max-height: 500px; border: white solid; margin-left: 10%; max-width: 80%">
+            <div class="col-md-4" style="max-width: 10%;">
                 <h3>{{ post.username }}</h3>
             </div>
             {% if post.image != 'n/a' %}
-            <div class="col-md-3 offset-md-2">
+            <div class="col-md-3 offset-md-2" style="max-width: 40%; margin-right: 50px">
                 <img id="main" class="card" style="max-height: 150px" height="150px" src="{{ post.image }}"  alt="image"/>
             </div>
             {% endif %}
-            <div class="col-md-2">
-                <p>{{ post.post }}</p>
+            <div class="col-md-2" style="max-height: 370px; min-width: 100px; overflow: auto; width: 50%; margin-left: 20px">
+                <p style="height: 90%;">{{ post.post }}</p>
             </div>
+
         </div>
     {% endfor %}
+    <div class="h-100 d-flex align-items-center justify-content-center">
+        {% if post.has_previous %}
+            <a href="?page=1">First</a>
+            <a href="?page={{ post.previous_page_number }}">Previous</a>
+        {% endif %}
+
+        Page: {{ post.number }} of {{ post.paginator.num_pages }}
+
+
+        {% if post.has_next %}
+            <a href="?page={{ post.next_page_number }}">Next</a>
+            <a href="?page={{ post.paginator.num_pages }}">Last</a>
+        {% endif %}
+    </div>
 {% else %}
 <h3>Please log in to see content</h3>
 {% endif %}
